force-app/main/default/src/objects/PJN_Contact_Information__c/PJN_Contact_Information__c.object-meta.xml
<CustomObject>
    <description>Part of the Patient Services Accelerator, the contact information object is used to store address, phone and email information related to an account.</description>
    <label>Contact Information</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>