force-app/main/default/src/objects/PJN_Contact_Information__c/fields/MVN_Best_Times__c.field-meta.xml
<CustomField>
    <fullName>MVN_Best_Times__c</fullName>
    <label>Best Times</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>