force-app/main/default/src/objects/PJN_Contact_Information__c/fields/MVN_Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_Email_Consent__c</fullName>
    <description>Email Consent, Y for Opt In, N for Opt Out
Created by Mavens CLM 01242022</description>
    <formula>IF (  Number_of_Channel_Consent_Opt_Ins_MVN__c &gt; 0 , &quot;Y&quot; ,
IF (  Number_of_Channel_Consent_Opt_Outs_MVN__c &gt; 0 , &quot;N&quot; , &quot;&quot; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Consent</label>
    <type>Text</type>
</CustomField>