force-app/main/default/src/objects/PJN_Contact_Information__c/fields/MVN_Phone_E_164__c.field-meta.xml
<CustomField>
    <fullName>MVN_Phone_E_164__c</fullName>
    <description>Stores the phone number formatted using the E.164 international standard.  For use with Service Cloud Voice, value is set via automation.  -- Mavens, 29 Jul 2021</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Phone E.164</label>
    <length>50</length>
    <type>Text</type>
</CustomField>