force-app/main/default/src/objects/PJN_Contact_Information__c/fields/MVN_Set_as_Shipping__c.field-meta.xml
<CustomField>
    <fullName>MVN_Set_as_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this record should be set as the shipping address. A trigger will manage this update.</description>
    <inlineHelpText>Indicates this record should be set as the address where product should be shipped for a patient.</inlineHelpText>
    <label>Set as Shipping</label>
    <type>Checkbox</type>
</CustomField>