force-app/main/default/src/objects/PJN_Contact_Information__c/fields/MVN_Set_as_SMS__c.field-meta.xml
<CustomField>
    <fullName>MVN_Set_as_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this record should be set as the SMS phone number. A trigger will manage this update.</description>
    <inlineHelpText>Indicates this record should be set as the SMS phone number.</inlineHelpText>
    <label>Set as SMS</label>
    <type>Checkbox</type>
</CustomField>