force-app/main/default/src/objects/PJN_Contact_Information__c/fields/MVN_Shipping__c.field-meta.xml
<CustomField>
    <fullName>MVN_Shipping__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;PJN_Address&quot;,
Id = PJN_Account__r.MVN_Shipping_Address__c,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping</label>
    <type>Checkbox</type>
</CustomField>