force-app/main/default/src/objects/PJN_Contact_Information__c/fields/MVN_SMS__c.field-meta.xml
<CustomField>
    <fullName>MVN_SMS__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;PJN_Phone&quot;,
Id = PJN_Account__r.MVN_SMS_Phone__c,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>