force-app/main/default/src/objects/PJN_Contact_Information__c/fields/MVN_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>MVN_Time_Zone__c</fullName>
    <formula>PJN_Account__r.MVN_Time_Zone__c</formula>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>