force-app/main/default/src/objects/PJN_Contact_Information__c/fields/Number_of_Channel_Consent_Opt_Outs_MVN__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Channel_Consent_Opt_Outs_MVN__c</fullName>
    <label>Number of Channel Consent Opt Outs</label>
    <summaryFilterItems>
        <field>PJN_Channel_Consent__c.PJN_Privacy_Consent_Status__c</field>
        <operation>equals</operation>
        <value>Opt Out</value>
    </summaryFilterItems>
    <summaryForeignKey>PJN_Channel_Consent__c.PJN_Contact_Information__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>