force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Account__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account__c</fullName>
    <description>Master-Detail: Relationship to the Account object that links the Contact Information record to an Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Information</relationshipLabel>
    <relationshipName>PJN_Contact_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>