force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Name__c</fullName>
    <formula>PJN_Account__r.FirstName &amp; &apos; &apos; &amp; PJN_Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>