force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Address_Line_2__c</fullName>
    <description>Text(100) for address line 2.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>