force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Best_Time__c.field-meta.xml
<CustomField>
    <fullName>PJN_Best_Time__c</fullName>
    <description>The best time to contact an account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Best Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>