force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_City__c.field-meta.xml
<CustomField>
    <fullName>PJN_City__c</fullName>
    <description>City field for Contact Information.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>