force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Consent_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>