force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Country__c.field-meta.xml
<CustomField>
    <fullName>PJN_Country__c</fullName>
    <description>Country field for Contact Information, utilizing HealthCloudGA country global field set.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>