force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Created_From_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Created_From_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact information address record a phone or fax was generated from.</description>
    <label>Created From Address</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Generated Records</relationshipLabel>
    <relationshipName>Contact_Information</relationshipName>
    <type>Lookup</type>
</CustomField>