force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Duplicate_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Duplicate_Network_Id__c</fullName>
    <description>This field stores the network id for an address that already exists in the system.

Scenario: Address created. DCR sent to Network. DCR partially or fully approved. Data flows back to PEP and tries to update the address to set the new network id. network id already exists. update will fail as network id is unique. This field allows us to hold the id so it is not lost and a batch job can someday be implemented to merge the contact info records</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Duplicate Network ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>