force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Email__c.field-meta.xml
<CustomField>
    <fullName>PJN_Email__c</fullName>
    <description>Email: Correspondence email address.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>