force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Extension_Number__c</fullName>
    <description>Text(10) extension number of the phone.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Extension Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>