force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_External_ID__c</fullName>
    <description>Text (50): Contact Information External ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>