force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Fax_2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Fax_2__c</fullName>
    <description>Second fax.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax 2</label>
    <type>Phone</type>
</CustomField>