force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Fax__c.field-meta.xml
<CustomField>
    <fullName>PJN_Fax__c</fullName>
    <description>Fax: Correspondence fax number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>