force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Is_Relay_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Relay_Phone__c</fullName>
    <description>Indicates this record has been selected as the phone number to be used for Relay Network SMS communications.</description>
    <formula>PJN_Account__r.PJN_Relay_Phone__c == Id</formula>
    <inlineHelpText>Indicates this record has been selected as the phone number to be used for Relay Network SMS communications.</inlineHelpText>
    <label>Relay Phone</label>
    <type>Checkbox</type>
</CustomField>