force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Mastered_Record__c.field-meta.xml
<CustomField>
    <fullName>PJN_Mastered_Record__c</fullName>
    <formula>OR(
  IF( RecordType.DeveloperName = &apos;PJN_Email&apos;,
    NOT( ISBLANK( PJN_Veeva_Network_Id__c )),
    NOT( ISBLANK( PJN_Created_From_Address__c ))
  ),
  IF( RecordType.DeveloperName = &apos;PJN_Address&apos;,
    OR(NOT( ISBLANK( PJN_Veeva_Network_Id__c )), NOT( ISBLANK( PJN_Account__r.PJN_Veeva_Network_Id__c ))),
    NOT( ISBLANK( PJN_Created_From_Address__c ))
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mastered Record</label>
    <type>Checkbox</type>
</CustomField>