force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Network_DCR_Eligible__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_DCR_Eligible__c</fullName>
    <description>Marks whether the record is eligible for DCR creation for Veeva Network</description>
    <formula>PJN_Mastered_Record__c 
&amp;&amp; NOT(ISPICKVAL(PJN_Status__c, &apos;Rejected By Network&apos;)) 
&amp;&amp; ( PJN_Account__r.RecordType.DeveloperName == &apos;PJN_Physician&apos; 
    || PJN_Account__r.RecordType.DeveloperName == &apos;PJN_Organization&apos;) 
&amp;&amp; NOT(ISPICKVAL( PJN_Account__r.PJN_Status__c , &apos;Rejected By Network&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Network DCR Eligible</label>
    <type>Checkbox</type>
</CustomField>