force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Phone_2__c</fullName>
    <description>Second phone.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>