force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Phone__c</fullName>
    <description>Phone: Correspondence phone number.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>