force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Postal_Code__c</fullName>
    <description>Text(10) Zip/postal code.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>