force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Primary__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;PJN_Address&quot;, 
  Id = PJN_Account__r.PJN_Primary_Address__c,
  IF(RecordType.DeveloperName = &quot;PJN_Email&quot;,
    Id = PJN_Account__r.PJN_Primary_Email__c,
    IF(RecordType.DeveloperName = &quot;PJN_Phone&quot;,
      Id = PJN_Account__r.PJN_Primary_Phone__c,
      IF(RecordType.DeveloperName = &quot;PJN_Fax&quot;,
        Id = PJN_Account__r.PJN_Primary_Fax__c,
        FALSE
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>