force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>