force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Related_Address_Fax_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Related_Address_Fax_Field__c</fullName>
    <description>Picklist: If the fax value is related to an Address_vod  fax field, this field indicates which field corresponds to that value.</description>
    <label>Related Address Fax Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fax_vod__c</fullName>
            </value>
            <value>
                <fullName>Fax_2_vod__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>