force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Related_Address_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Related_Address_Phone_Field__c</fullName>
    <description>Picklist: If the phone value is related to an Address_vod phone field, this field indicates which field corresponds to that value.</description>
    <label>Related Address Phone Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone_vod__c</fullName>
            </value>
            <value>
                <fullName>Phone_2_vod__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>