force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sequence_Number__c</fullName>
    <description>Number: Contact information priority sequence number.</description>
    <inlineHelpText>The contact information priority sequence number.</inlineHelpText>
    <label>Sequence #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>