force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Set_as_Primary__c.field-meta.xml
<CustomField>
    <fullName>PJN_Set_as_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates this record should be set as primary. A trigger will manage this update.</description>
    <inlineHelpText>Indicates this record should be set as primary.</inlineHelpText>
    <label>Set as Primary</label>
    <type>Checkbox</type>
</CustomField>