force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Set_as_Relay_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Set_as_Relay_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, sets this phone number as the Relay Phone on the parent Account.</description>
    <inlineHelpText>When true, sets this phone number as the Relay Phone on the parent Account.</inlineHelpText>
    <label>Set as Relay Phone</label>
    <type>Checkbox</type>
</CustomField>