force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_State__c</fullName>
    <description>Global Value picklist for States, dependent on country.</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PJN_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PJN_State</valueSetName>
    </valueSet>
</CustomField>