force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status__c</fullName>
    <description>Status of the contact information</description>
    <inlineHelpText>Status of the contact information</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Rejected By Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>