force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type_Formula__c</fullName>
    <description>Return the record type plus the type</description>
    <formula>RecordType.Name +
 IF (NOT(ISBLANK(TEXT(PJN_Type__c))), &apos; - &apos; + TEXT(PJN_Type__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Return the record type plus the type</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>