force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Value__c</fullName>
    <description>Set by workflow when contact info is created or updated, this field stores the formatted value. This used to be a formula but prevented encryption of phone fields used in formulas</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>