force-app/main/default/src/objects/PJN_Contact_Information__c/fields/PJN_Voice_Messages_OK__c.field-meta.xml
<CustomField>
    <fullName>PJN_Voice_Messages_OK__c</fullName>
    <description>Picklist: Indicating whether or not it is OK to leave a voice message.</description>
    <label>Voice Messages OK?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>