force-app/main/default/src/objects/PJN_Contact_Information__c/recordTypes/PJN_Address.recordType-meta.xml
<RecordType>
    <fullName>PJN_Address</fullName>
    <active>true</active>
    <description>Defines address contact information</description>
    <label>Address</label>
</RecordType>