force-app/main/default/src/objects/PJN_Contact_Information__c/recordTypes/PJN_Email.recordType-meta.xml
<RecordType>
    <fullName>PJN_Email</fullName>
    <active>true</active>
    <description>Defines email contact information</description>
    <label>Email</label>
</RecordType>