force-app/main/default/src/objects/PJN_Contact_Information__c/recordTypes/PJN_Fax.recordType-meta.xml
<RecordType>
    <fullName>PJN_Fax</fullName>
    <active>true</active>
    <description>Defines fax contact information</description>
    <label>Fax</label>
</RecordType>