force-app/main/default/src/objects/PJN_Contact_Information__c/recordTypes/PJN_Phone.recordType-meta.xml
<RecordType>
    <fullName>PJN_Phone</fullName>
    <active>true</active>
    <description>Defines phone contact information</description>
    <label>Phone</label>
</RecordType>