force-app/main/default/src/objects/PJN_Contact_Information__c/validationRules/MVN_Fax_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>MVN_Fax_Number_Length</fullName>
    <active>true</active>
    <description>Validates that the Fax number is in (999) 999-9999
format. This works by using the REGEX function to check that the number has ten
digits in the (999) 999-9999 format.</description>
    <errorConditionFormula>AND(NOT(REGEX(PJN_Fax__c,&apos;\\d*&apos;)), NOT(REGEX(PJN_Fax__c,&apos;\\(\\d{3}\\) \\d{3}-\\d{4}&apos;)))</errorConditionFormula>
    <errorDisplayField>PJN_Fax__c</errorDisplayField>
    <errorMessage>Fax number must contain 10 digits unformatted or in the (999) 999-9999 format.</errorMessage>
</ValidationRule>