force-app/main/default/src/objects/PJN_Contact_Information__c/listViews/PJN_All.listView-meta.xml
<ListView>
    <fullName>PJN_All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>PJN_Type__c</columns>
    <columns>PJN_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>